--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "sass": "^1.32.8"
   },
   "scripts": {
-    "deloy": "npm run build && firebase deploy",
+    "deploy": "npm run build && firebase deploy",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "format": "prettier --write \"./**/*.{js,css,json,scss}\"",
